# Hierarchical-Sensor-Monitoring

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile  QWEN.md  README.md  ReleaseNote - Copy.md  ReleaseNote.md  ReleaseNote3.17.md  WORK_SESSION_NOTES.md  _fix_valuecolumn.js  docker-compose.yml  docker_load_and_run.ps1  local-docker-build.cmd  package-lock.json  ruleset.json  top-cpu-manual-test-checklist.md
.continue/: config.json
.github/: pull_request_template.md
DataStorage/: HSMDataStorage.csproj
HSMClient/: AddNewProductWindow.xaml  AddNewProductWindow.xaml.cs  App.config  App.xaml  App.xaml.cs  ClientMonitoringModel.cs  ClientProductsModel.cs  ClientSettingsModel.cs  Converter.cs  DownloadUpdateModel.cs  GenerateCertificateWindow.xaml  GenerateCertificateWindow.xaml.cs  GenerateCertificateWindowViewModel.cs  HSMClient.csproj  HSMClient.sln  HttpClient.cs  MainWindow.xaml  MainWindow.xaml.cs  MainWindowViewModel.cs  ProductsWindow.xaml.cs  ProductsWindowViewModel.cs  Program.cs  SensorsServiceClient.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs  SettingsWindowViewModel.cs  UpdateClientModel.cs  bin - Shortcut.lnk  version.txt
HSMClient.Common/: HSMClient.Common.csproj  TextConstants.cs
HSMClientInstaller/: Installer1.iss
HSMClientUpdater/: HSMClientUpdater.csproj  Program.cs
HSMClientWPFControls/: CounterTypes.cs  HSMClientWPFControls - Backup.csproj  HSMClientWPFControls.csproj  IMonitoringCounterStatusHandler.cs  IMonitoringModel.cs  IMonitoringSensorStatusHandler.cs  IProductListModel.cs  SensorTypes.cs
HSMCommon/: CertificateReader.cs  CommonConstants.cs  FileManager.cs  HSMCommon.csproj  HashComputer.cs
HSMDataCollector/: HSMDataCollector.csproj  HSMDataCollector.nuspec  HSMDataCollector.sln  HSMSensorDataObjects.csproj.nuspec  SensorType.cs
HSMDataSendingDemo/: HSMDataSendingDemo.csproj  Program.cs
HSMGrpcClient/: ConnectorBase.cs  Converter.cs  GrpcClientConnector.cs  HSMGrpcClient.csproj
HSMSensorDataObjects/: BoolSensorValue.cs  CommonSensorValue.cs  DoubleBarSensorValue.cs  HSMSensorDataObjects.csproj  ISensorValue.cs  SensorType.cs  SensorValueBase.cs
HSMServer/: HSMServer.csproj  HSMServer.sln  HSMServer.xml  HashComputer.cs  MAMSServer.xml  Program.cs  ReturnCodes.cs  Startup.cs  appsettings.json  ctempinternal-nlog.txt  nlog.config
HSMServer.Core/: Config.cs
HSMServerInstaller/: serverinstall.iss
HSMgRPC/: HSMgRPC.csproj  Program.cs  Startup.cs  appsettings.json
src/agent/: .gitattributes  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  config.template.json  vcpkg.json
src/agent/cmake/: gen_timestamp.cmake
src/agent/include/agent/: agent_runtime.hpp  apply_update.hpp  config.hpp  cpu_top.hpp  event_log.hpp  file_logger.hpp  logging.hpp  paths.hpp  service_install.hpp  update_checker.hpp  windows_service.hpp
src/agent/packaging/: config.json  install-hsmagent-service.cmd  install.cmd  uninstall-hsmagent-service.cmd  uninstall.cmd  update-hsmagent-service.cmd
src/agent/src/: agent_runtime.cpp  apply_update.cpp  config.cpp  cpu_top.cpp  main.cpp  paths.cpp  update_checker.cpp
src/agent/src/logging/: agent_logger.cpp  file_logger.cpp
src/agent/src/service/: event_log.cpp  service_install.cpp  windows_service.cpp
src/agent/tests/: agent_tests.cpp
src/native/collector/: .clang-format  AGENTS.md  CMakeLists.txt  CMakePresets.json  conanfile.py  vcpkg.json
src/native/collector/bench/: baseline.json  hsm_collector_bench.cpp
src/native/collector/cmake/: hsm_collectorConfig.cmake.in
src/native/collector/examples/console/: CMakeLists.txt  main.cpp
src/native/collector/examples/console/standalone/: CMakeLists.txt
src/native/collector/examples/crypto-monitor/: CMakeLists.txt  main.cpp
src/native/collector/examples/server-monitor/: CMakeLists.txt  main.cpp
src/native/collector/examples/windows-monitor/: CMakeLists.txt  main.cpp
src/native/collector/include/hsm_collector/: alerts.hpp  collector.hpp  default_sensors.hpp  enums.hpp  error.hpp  hsm_collector.h  hsm_collector.hpp  options.hpp  sensors.hpp
src/native/collector/include/hsm_collector/detail/: callbacks.hpp
src/native/collector/src/: cpu_top.cpp  cpu_top.hpp  hsm_collector.cpp  hsm_http_endpoints.hpp  hsm_http_retry.hpp  hsm_http_transport.cpp  hsm_http_transport.hpp  network_speed.cpp  network_speed.hpp  tcp_connection_stats.cpp  tcp_connection_stats.hpp  windows_info.cpp  windows_info.hpp
src/native/collector/src/platform/: hsm_windows_metric_sources.cpp  hsm_windows_metric_sources.hpp
src/native/collector/test_package/: CMakeLists.txt  conanfile.py
src/native/collector/test_package/src/: consumer.cpp
src/native/collector/tests/: hsm_collector_tests.cpp  http_capture_server.hpp
src/native/collector/vcpkg-port/: copyright  portfile.cmake  vcpkg.json
src/native/collector_spike/: CMakeLists.txt
src/native/collector_spike/include/hsm_collector/: hsm_collector.h  hsm_collector.hpp
src/native/collector_spike/src/: hsm_collector.cpp
src/native/collector_spike/tests/: hsm_collector_spike_tests.cpp
src/wrapper/: CMakeLists.txt  DataCollector.cpp  DataCollectorImpl.cpp  DataCollectorImpl.h  HSMBarSensor.cpp  HSMBarSensorImpl.h  HSMBaseNoParamsFuncSensor.cpp  HSMBaseNoParamsFuncSensor.h  HSMBaseParamsFuncSensor.cpp  HSMBaseParamsFuncSensor.h  HSMCppWrapper.sln  HSMCppWrapper.vcxproj  HSMCppWrapper.vcxproj.filters  HSMLastValueSensor.cpp  HSMLastValueSensorImpl.h  HSMNoParamsFuncSensor.cpp  HSMNoParamsFuncSensorImpl.h  HSMParamsFuncSensor.cpp  HSMParamsFuncSensorImpl.h  HSMRateSensor.cpp  HSMRateSensorImpl.h  HSMSensor.cpp  HSMSensorImpl.h  HSMSensorOptions.cpp  HSMSensorOptionsImpl.h  make_build.build  pch.h
src/wrapper/WrapperConsole/: WrapperConsole.cpp  WrapperConsole.vcxproj  WrapperConsole.vcxproj.filters  WrapperSmoke.cpp
src/wrapper/include/: DataCollector.h  HSMBarSensor.h  HSMCppWrapper.h  HSMEnums.h  HSMLastValueSensor.h  HSMNoParamsFuncSensor.h  HSMParamsFuncSensor.h  HSMRateSensor.h  HSMSensor.h  HSMSensorOptions.h  SensorStatus.h
src/wrapper/packaging/: README.md  pack.ps1
(+3466 files in other folders)
